src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Temperature__c</fullName>
        <description>SS-2990</description>
        <label>Temperature</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>CSP-2070 - This field is created to hold tier information which is retrieved from the field Fulfillment_Data__c</description>
        <label>Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Bio__c</fullName>
        <description>The contact&apos;s Twitter bio. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter bio. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Clicks__c</fullName>
        <description>The number of times a contact clicked on links you shared on Twitter through HubSpot. This is set automatically by HubSpot and can be used for segmentation.</description>
        <inlineHelpText>The number of times a contact clicked on links you shared on Twitter through HubSpot. This is set automatically by HubSpot and can be used for segmentation.</inlineHelpText>
        <label>Twitter Clicks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>The contact&apos;s Twitter handle. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter handle. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Profile_Photo__c</fullName>
        <description>The contact&apos;s Twitter profile photo. This is set by HubSpot using the contact&apos;s email address.</description>
        <inlineHelpText>The contact&apos;s Twitter profile photo. This is set by HubSpot using the contact&apos;s email address.</inlineHelpText>
        <label>Twitter Profile Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Status_Time_Stamp__c</fullName>
        <label>Valid Status Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_US_ZipCode__c</fullName>
        <description>This field will be used to check for valid zipcodes. Will be false if Zipcode is any length other than 0, 5 or 10</description>
        <formula>OR(LEN(PostalCode) = 5,  LEN(PostalCode) = 10, LEN(PostalCode)=0)</formula>
        <inlineHelpText>This field will be used to check for valid zipcodes. Will be false if Zipcode is any length other than 0, 5 or 10</inlineHelpText>
        <label>Valid US ZipCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip</label>
        <referenceTo>Zip__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createdbyProfilename__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>createdbyProfilename</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyRoledevelopername__c</fullName>
        <description>this field is to store createdby Role developername</description>
        <formula>CreatedBy.UserRole.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>createdbyRoledevelopername</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Last distributed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Last reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_rejected__c</fullName>
        <description>Date &amp; time that the DE assignment of this lead was last rejected</description>
        <inlineHelpText>Date &amp; time that the DE assignment of this lead was last rejected</inlineHelpText>
        <label>Last rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofDaysSinceLastActivity__c</fullName>
        <formula>IF(isblank(LastActivityDate__c) ,-1,LastActivityDate__c- TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofDaysSinceLastModified__c</fullName>
        <formula>LastModifiedDate__c-TODAY()</formula>
        <label># of Days Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testray__c</fullName>
        <label>testray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Score__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BDR_Views</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>BDR Views</label>
        <sharedTo>
            <group>BDR_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_Distributable_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Core Distributable</label>
        <queue>Core_Distributable</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Duplicate_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Score__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>Marketplace_Health_Color__c</columns>
        <columns>Marketplace_Health_Text__c</columns>
        <columns>Local_Sales_Market__c</columns>
        <columns>Primary_Category__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified,Invalid</value>
        </filters>
        <filters>
            <field>Negative_Disposition_Reason__c</field>
            <operation>equals</operation>
            <value>Duplicate</value>
        </filters>
        <label>Data Duplicate Leads</label>
        <sharedTo>
            <role>Data_Quality_Manager</role>
            <role>Data_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Enrichment</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Primary_Category__c</columns>
        <columns>Storefront_Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Invalid,Disqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Data Enrichment</value>
        </filters>
        <label>Data Enrichment_new</label>
        <queue>Data_Enrichment</queue>
        <sharedTo>
            <group>Data_Local_Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Enrichment_Lead</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Primary_Category__c</columns>
        <columns>Storefront_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Invalid,Disqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>shedrick,ssch,hrob,ldud,emart</value>
        </filters>
        <label>Data Enrichment</label>
        <sharedTo>
            <group>Data_Local_Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Need_Enrichment_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Score__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>Marketplace_Health_Color__c</columns>
        <columns>Marketplace_Health_Text__c</columns>
        <columns>Local_Sales_Market__c</columns>
        <columns>Primary_Category__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified,Invalid</value>
        </filters>
        <filters>
            <field>Negative_Disposition_Reason__c</field>
            <operation>equals</operation>
            <value>Wrong Industry,Bad Contact,Missing Required Information</value>
        </filters>
        <label>Data Needs Enrichment Leads</label>
        <sharedTo>
            <role>Data_Quality_Manager</role>
            <role>Data_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_New_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Score__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>Marketplace_Health_Color__c</columns>
        <columns>Marketplace_Health_Text__c</columns>
        <columns>Local_Sales_Market__c</columns>
        <columns>Primary_Category__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Data New Leads</label>
        <sharedTo>
            <role>Data_Quality_Manager</role>
            <role>Data_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_OOB_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Score__c</columns>
        <columns>Profile__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Negative_Disposition_Reason__c</columns>
        <columns>Marketplace_Health_Color__c</columns>
        <columns>Marketplace_Health_Text__c</columns>
        <columns>Local_Sales_Market__c</columns>
        <columns>Primary_Category__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <filters>
            <field>Negative_Disposition_Reason__c</field>
            <operation>equals</operation>
            <value>Out of Business</value>
        </filters>
        <label>Data OOB Leads</label>
        <sharedTo>
            <role>Data_Quality_Manager</role>
            <role>Data_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Dead Queue</label>
        <queue>Dead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Distributable_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Distributable</label>
        <queue>Distributable</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Jackie_Ornellas_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Jackie Ornellas</label>
        <queue>LOA_Jackie_Ornellas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Sarah_Rucinski_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Sarah Rucinski</label>
        <queue>LOA_Sarah_Rucinski</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Backlog_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Backlog</label>
        <queue>Lead_Backlog</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Red_Prospects_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Red Prospects</label>
        <queue>Red_Prospects</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>LeadConcierge</fullName>
        <active>false</active>
        <businessProcess>Lead Concierge</businessProcess>
        <description>Phase 1 - Recordtype for Concierge</description>
        <label>Concierge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <businessProcess>Local</businessProcess>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <businessProcess>Lead National</businessProcess>
        <description>Phase 1 of National</description>
        <label>National</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <businessProcess>Local</businessProcess>
        <label>Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>TestData</fullName>
        <active>true</active>
        <businessProcess>Local</businessProcess>
        <label>TestData</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Access_to_Lead_Auto_Convert</fullName>
        <active>true</active>
        <description>Only certain users can trigger a Lead Auto Convert</description>
        <errorConditionFormula>AND(
AND( 
$Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;Service Accounts&apos;,
$Profile.Name != &apos;Service Accounts Hubspot&apos;),
OR(ISCHANGED( Status ), ISCHANGED( Storefront_Status__c )),
ISPICKVAL(Status, &apos;Qualified&apos;),
ISPICKVAL(Storefront_Status__c, &apos;Claimed&apos;)
)</errorConditionFormula>
        <errorMessage>You can&apos;t Qualify and and Claim a Lead at the same time. Please use the Convert feature to Qualify and Claim a lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allowed_DisqualificationReason_Values</fullName>
        <active>true</active>
        <description>csp-1957</description>
        <errorConditionFormula>AND 
(ISPICKVAL(Status,&apos;Disqualified&apos;),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;No Budget&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;No Authority&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;No Need&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Out of Business&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;No Timeline&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Cannot Connect&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Bad Contact&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Duplicate&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Do Not Contact&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Wrong Industry&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Other&apos;)))</errorConditionFormula>
        <errorMessage>Please select a &apos;Negative Disposition Reason&apos; when the Lead Status is &apos;Disqualified&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allowed_Invalid_Reason_Picklist_Values</fullName>
        <active>true</active>
        <description>csp-1940: lead with status &apos;Invalid&apos; requires the user to select invalid reason from the following possible values: Duplicate, No contact information, Out of Business, Wrong Industry, Other</description>
        <errorConditionFormula>AND 
(ISPICKVAL(Status, &apos;Invalid&apos;),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Duplicate&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;No contact information&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Out Of Business&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Wrong Industry&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Other&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;National&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Missing Required Information&apos;)), 
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Failed Claim Request&apos;)))</errorConditionFormula>
        <errorMessage>Please select a &apos;Negative Disposition Reason&apos; when the Lead Status is &apos;Invalid&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DetailsRequired_For_NegativeReason_Other</fullName>
        <active>true</active>
        <description>csp-1940</description>
        <errorConditionFormula>AND( 
(ISPICKVAL(Status, &apos;Invalid&apos;)), 
(ISPICKVAL(Negative_Disposition_Reason__c, &apos;Other&apos;)),
(ISBLANK(Reason_Details__c)))</errorConditionFormula>
        <errorMessage>&apos;Reason Details&apos; are required when a lead status is &apos;Invalid&apos; and Negative Disposition Reason is &apos;Other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Details_Is_Required_For_Other</fullName>
        <active>true</active>
        <description>csp-1940: Disqualification reason with the value of &apos;Other&apos; requires the user to enter additional details under &apos;Details&apos;</description>
        <errorConditionFormula>AND( 
(ISPICKVAL(Status, &apos;Disqualified&apos;)), 
(ISPICKVAL(Negative_Disposition_Reason__c, &apos;Other&apos;)), 
(ISBLANK(Reason_Details__c)))</errorConditionFormula>
        <errorMessage>Disqualification reason with the value of &apos;Other&apos; requires the user to enter additional details under &apos;Reason Details&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Details_Required_Only_For_Inv_Disqual</fullName>
        <active>true</active>
        <description>csp-1940</description>
        <errorConditionFormula>OR(
AND(
(NOT(ISPICKVAL(Status, &apos;Invalid&apos;))),
(NOT(ISPICKVAL(Status, &apos;Disqualified&apos;))),
(!ISBLANK(Reason_Details__c))),
AND(
OR((ISPICKVAL(Status, &apos;Invalid&apos;)),
(ISPICKVAL(Status, &apos;Disqualified&apos;))),
(NOT(ISPICKVAL(Negative_Disposition_Reason__c, &apos;Other&apos;))),
(!ISBLANK(Reason_Details__c))))</errorConditionFormula>
        <errorMessage>Reason details is required only for Negative Disposition Reason of &apos;Other&apos; for Invalid and Disqualified leads</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Creation_Validation</fullName>
        <active>true</active>
        <description>Set several fields as one of the requirements when creating Lead from any source. Related to CSP-1974. 
00ej0000001V4bU is the ID for the Hubspot profile. If the user is HS, the lead could be created without the data in validation rule.</description>
        <errorConditionFormula>And(
OR(
ISBLANK(Company),
AND(ISBLANK(Phone),ISBLANK(Email),ISBLANK(Website)),
ISBLANK(FirstName), 
ISBLANK(LastName)
),
ISNEW(),
$Profile.Name != &quot;Service Accounts Hubspot&quot;,
RecordType.Name=&quot;Local&quot;
)</errorConditionFormula>
        <errorMessage>Lead cannot be created without Company Name, Phone or Email or Website, First Name and Last name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_First_Name_is_required</fullName>
        <active>false</active>
        <description>Intended to make the first name field as required during lead creation. Refer SF-1795
00ej0000001V4bU is the ID for the Hubspot profile.  This is to make it so if HS passes SF a lead that doesn&apos;t exist then it will create it.</description>
        <errorConditionFormula>ISBLANK(FirstName)
&amp;&amp; !ISCHANGED(OwnerId)
&amp;&amp;  $User.ProfileId  != &apos;00ej0000001V4bU&apos;</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_GUID_change_validation</fullName>
        <active>false</active>
        <description>Once a GUID value is assigned to a Lead, do not allow it to be changed</description>
        <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(DynamicsLeadID__c))) &amp;&amp; ISCHANGED(DynamicsLeadID__c)</errorConditionFormula>
        <errorMessage>You can&apos;t change the GUID of a Lead!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Access_Limitation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

RecordType.Name=&apos;Local&apos;, 
ISCHANGED(LeadSource), 
NOT(ISBLANK(PRIORVALUE(LeadSource))) ,

OR( 
$Profile.Name = &apos;Local Core Account Executive&apos;, 
$Profile.Name = &apos;Local Core Marketing&apos;, 
$Profile.Name = &apos;Local Core Strategy Specialist&apos;, 
$Profile.Name = &apos;Local Core Strategy Specialist Reviews&apos;, 
$Profile.Name = &apos;Local Core Sales Operations&apos;, 
$Profile.Name = &apos;Local Core Regional Sales (RSR, RSD)&apos;, 
$Profile.Name = &apos;Local Core Finance - ARR&apos;,
$Profile.Name = &apos;Local Sales Data Team&apos;
) ,
And(
$User.Id &lt;&gt; &apos;005j000000DU2IA&apos;,
$User.Id &lt;&gt; &apos;005f100000HIIeH&apos;,
$User.Id &lt;&gt; &apos;005f100000HIIel&apos;,
$User.Id &lt;&gt; &apos;005j000000Ebohp&apos;,
$User.Id &lt;&gt; &apos;005f100000HIIf5&apos;,
$User.Id &lt;&gt; &apos;005j000000DU2II&apos;
)



)</errorConditionFormula>
        <errorMessage>The Lead Source cannot be modified once a value is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Status_Unknown_Possible_Values</fullName>
        <active>true</active>
        <description>csp-1940, 2440: leads status of &apos;Unknown&apos; requires the user to select invalid reason from the following possible values: Cannot verify online, Ecommerce, Vendor outside US</description>
        <errorConditionFormula>AND
(ISPICKVAL(Status,&apos;Unknown&apos;),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Cannot verify online&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Ecommerce&apos;)),
NOT(ISPICKVAL(Negative_Disposition_Reason__c,&apos;Vendor outside US&apos;)))</errorConditionFormula>
        <errorMessage>Lead with status &apos;Unknown&apos; requires the user to select Negative_Disposition_Reason__c
from the following possible values: Cannot verify online, Ecommerce, Vendor outside US</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Valid_Validation</fullName>
        <active>true</active>
        <description>Validate if the enough data exists to be available for distribution(Status as Valid). Related to CSP-1974.
00ej0000001V4bU is the ID for the Hubspot profile. If the user is HS, it will pass the data and distribute the lead.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(LeadSource,&apos;&apos;),
ISBLANK(PostalCode),
ISBLANK(Primary_Category__c),
ISBLANK(Local_Sales_Market__c ),
ISPICKVAL(CountryCode, &apos;&apos;)
),
ISPICKVAL(Status, &apos;Valid&apos;),
$Profile.Name != &quot;Service Accounts Hubspot&quot;,
RecordType.Name=&quot;Local&quot;,
NOT( AND(Related_to_Paid_Media__c,  ISCHANGED(  Related_to_Paid_Media__c) ))
)</errorConditionFormula>
        <errorMessage>The lead cannot be distributed without Lead Source, Postal Code, Primary Category, Local Sales Market and Country Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_must_have_address_info_to_convert</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;LeadConcierge&apos;, ISBLANK(PostalCode), IsConverted)</errorConditionFormula>
        <errorDisplayField>PostalCode</errorDisplayField>
        <errorMessage>In order to convert this lead to a Concierge Account, you must include the zip code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocalAE_RSR_RSD_SysAdmin_Qualified_Disq</fullName>
        <active>true</active>
        <description>csp-2440: only Local AEs, RSRs/RSDs, and System Administrators can change the Status to Qualified or Disqualified and change the reason</description>
        <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
TEXT(Status) = &quot;Qualified&quot;,
TEXT(Status) = &quot;Disqualified&quot;),
OR(
$Profile.Name == &quot;Local Core Strategy Specialist Reviews&quot;,
$Profile.Name == &quot;Local Core Finance - ARR&quot;,
$Profile.Name == &quot;Local Core Marketing&quot;,
$Profile.Name == &quot;Local Core Sales Operations&quot;,
$Profile.Name == &quot;Local Core Strategy Specialist&quot;,
$Profile.Name == &quot;Local Core Strategy Specialist Reviews&quot;
))</errorConditionFormula>
        <errorMessage>Only Local AEs, RSRs/RSDs,  Data Team and System Administrators can change the Status to Qualified or Disqualified and change the reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocalCore_And_SalesAdmin_CanChangeStatus</fullName>
        <active>true</active>
        <description>csp-2440: only Local Core Sales Operations and System Administrators can change the Status to Valid, Invalid, or Unknown and change the reason</description>
        <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
TEXT(Status) == &quot;Invalid&quot;,
TEXT(Status) == &quot;Unknown&quot;,
TEXT(Status) == &quot;Valid&quot;),
OR(
$Profile.Name == &quot;Local Core Strategy Specialist Reviews&quot;,
$Profile.Name == &quot;Local Core Account Executive&quot;,
$Profile.Name == &quot;Local Core Finance - ARR&quot;,
$Profile.Name == &quot;Local Core Marketing&quot;,
$Profile.Name == &quot;Local Core Regional Sales (RSR, RSD)&quot;,
$Profile.Name == &quot;Local Core Strategy Specialist&quot;,
$Profile.Name == &quot;Local Core Strategy Specialist Reviews&quot;
))</errorConditionFormula>
        <errorMessage>Only Local Core Sales Operations and System Administrators can change the Status to Valid, Invalid, or Unknown and change the reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Local_Enforce_Opportunity_Lead_Convert</fullName>
        <active>true</active>
        <description>Validation rule used to enforce the creation of an Opportunity on Lead Conversion for Local Core Account Executives. CSP-2540</description>
        <errorConditionFormula>RecordType.Name == &apos;Local&apos; &amp;&amp; IsConverted = true &amp;&amp; ConvertedOpportunityId == null &amp;&amp; $Profile.Name == &apos;Local Core Account Executive&apos;</errorConditionFormula>
        <errorMessage>You must create an opportunity when converting leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Local_Lead_Disqualification_Reason</fullName>
        <active>false</active>
        <description>If a Local Lead has a Status of Disqualified, require a value be chosen in the &quot;Disqualification Reason&quot; picklist. SF-611</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Local&apos; &amp;&amp; ISPICKVAL(Status, &apos;Disqualified&apos;) &amp;&amp; ISPICKVAL(Disqualification_Reason__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Disqualification_Reason__c</errorDisplayField>
        <errorMessage>If Local Lead has a Status of Disqualified, a Disqualification Reason must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preventing_Owner_Changes_on_Local</fullName>
        <active>true</active>
        <description>This rule is designed to make it so that the following profiles CANNOT change the owner on existing lead records. This is for the ticket SS-3642 where RSR/RSDs changed the owners on leads after the Sales Operations and Data Teams has done an update.</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
PRIORVALUE(OwnerId) != $User.Id , 
Record_Type_Name__c = &apos;Local&apos;,
 
OR( 
$Profile.Name = &apos;Concierge Manager&apos;, 
$Profile.Name = &apos;Concierge Rep&apos;, 
$Profile.Name = &apos;Contract Manager&apos;, 
$Profile.Name = &apos;Local Core Account Executive&apos;, 
$Profile.Name = &apos;Local Core Marketing&apos;, 
$Profile.Name = &apos;Local Core Strategy Specialist&apos;, 
$Profile.Name = &apos;Local Core Strategy Specialist Reviews&apos;, 
$Profile.Name = &apos;Marketing User&apos;, 
$Profile.Name = &apos;National Users&apos;, 
$Profile.Name = &apos;Solution Manager&apos;, 
$Profile.Name = &apos;Standard User&apos; 
) 
)</errorConditionFormula>
        <errorMessage>Your profile is not allowed to change the owner of a lead. Please contact one of your Sales Operations team members to update the owner of this record.</errorMessage>
    </validationRules>
</CustomObject>